Fix Layout Issue #2

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -50,7 +50,7 @@ text {
     outline: none;
     border: none;
     width: 100%;
-    padding: 2rem 7.5rem;
+    padding: 1.25rem 7.5rem;
     font-size: 1.75rem;
     border-radius: 3px;
     font-weight: 500;
